tests/derive/tests/snapshots/derive__snapshots_conversion_based_opaque_shape.snap
---
source: tests/derive/tests/derive.rs
expression: "FromString::deserialize_shape()"
---
DeserializeShapeGraph {
    root: Definition(
        ShapeId(
            0,
        ),
    ),
    definitions: [
        DeserializeDefinitionShape {
            id: ShapeId(
                0,
            ),
            type_name: DeserializeTypeName {
                rust_name: "derive::FromString",
                name: "FromString",
            },
            kind: Opaque(
                OpaqueShape {
                    type_name: "derive::FromString",
                    reason: FromType,
                    detail: Some(
                        "String",
                    ),
                },
            ),
        },
    ],
}
