tests/derive/tests/snapshots/derive__snapshots_internally_tagged_enum_shape_from_variant_attrs.snap
---
source: tests/derive/tests/derive.rs
expression: "Storage::deserialize_shape()"
---
DeserializeShapeGraph {
    root: Definition(
        ShapeId(
            0,
        ),
    ),
    definitions: [
        DeserializeDefinitionShape {
            id: ShapeId(
                0,
            ),
            type_name: DeserializeTypeName {
                rust_name: "derive::Storage",
                name: "Storage",
            },
            kind: Enum(
                DeserializeEnumShape {
                    repr: Internal {
                        tag: "type",
                    },
                    variants: [
                        DeserializeVariantShape {
                            rust_name: "S3",
                            name: "s3",
                            aliases: [
                                "s3",
                                "s3-compatible",
                            ],
                            style: Struct,
                            content: Fields(
                                [
                                    DeserializeFieldShape {
                                        member: Named(
                                            "bucket_name",
                                        ),
                                        name: "bucket-name",
                                        aliases: [
                                            "bucket-name",
                                        ],
                                        wire_shape: Value(
                                            String,
                                        ),
                                        default: None,
                                    },
                                ],
                            ),
                            other: false,
                            untagged: false,
                        },
                        DeserializeVariantShape {
                            rust_name: "AzBlob",
                            name: "az-blob",
                            aliases: [
                                "az-blob",
                            ],
                            style: Struct,
                            content: Fields(
                                [
                                    DeserializeFieldShape {
                                        member: Named(
                                            "container_name",
                                        ),
                                        name: "container-name",
                                        aliases: [
                                            "container-name",
                                        ],
                                        wire_shape: Value(
                                            String,
                                        ),
                                        default: None,
                                    },
                                ],
                            ),
                            other: false,
                            untagged: false,
                        },
                        DeserializeVariantShape {
                            rust_name: "Other",
                            name: "other",
                            aliases: [
                                "other",
                            ],
                            style: Unit,
                            content: Fields(
                                [],
                            ),
                            other: true,
                            untagged: false,
                        },
                    ],
                    attributes: DeserializeContainerAttributes {
                        tagging: Internal {
                            tag: "type",
                        },
                        deny_unknown_fields: false,
                        default: None,
                        has_flatten: false,
                        transparent: false,
                        expecting: None,
                        non_exhaustive: true,
                    },
                },
            ),
        },
    ],
}
