tests/derive/tests/snapshots/derive__snapshots_phantom_data_generic_field_without_shape_bound.snap
---
source: tests/derive/tests/derive.rs
expression: "Marker::<NotShape>::deserialize_shape()"
---
DeserializeShapeGraph {
    root: Definition(
        ShapeId(
            0,
        ),
    ),
    definitions: [
        DeserializeDefinitionShape {
            id: ShapeId(
                0,
            ),
            type_name: DeserializeTypeName {
                rust_name: "derive::Marker<derive::NotShape>",
                name: "Marker",
            },
            kind: Struct(
                DeserializeStructShape {
                    style: Struct,
                    fields: [
                        DeserializeFieldShape {
                            member: Named(
                                "marker",
                            ),
                            name: "marker",
                            aliases: [
                                "marker",
                            ],
                            wire_shape: Value(
                                Unit,
                            ),
                            default: None,
                        },
                    ],
                    attributes: DeserializeContainerAttributes {
                        tagging: External,
                        deny_unknown_fields: false,
                        default: None,
                        has_flatten: false,
                        transparent: false,
                        expecting: None,
                        non_exhaustive: false,
                    },
                },
            ),
        },
    ],
}
