tests/derive/tests/snapshots/derive__snapshots_recursive_type_reusing_the_same_definition.snap
---
source: tests/derive/tests/derive.rs
expression: "Recursive::deserialize_shape()"
---
DeserializeShapeGraph {
    root: Definition(
        ShapeId(
            0,
        ),
    ),
    definitions: [
        DeserializeDefinitionShape {
            id: ShapeId(
                0,
            ),
            type_name: DeserializeTypeName {
                rust_name: "derive::Recursive",
                name: "Recursive",
            },
            kind: Struct(
                DeserializeStructShape {
                    style: Struct,
                    fields: [
                        DeserializeFieldShape {
                            member: Named(
                                "child",
                            ),
                            name: "child",
                            aliases: [
                                "child",
                            ],
                            wire_shape: Value(
                                Option(
                                    Definition(
                                        ShapeId(
                                            0,
                                        ),
                                    ),
                                ),
                            ),
                            default: None,
                        },
                    ],
                    attributes: DeserializeContainerAttributes {
                        tagging: External,
                        deny_unknown_fields: false,
                        default: None,
                        has_flatten: false,
                        transparent: false,
                        expecting: None,
                        non_exhaustive: false,
                    },
                },
            ),
        },
    ],
}
