tests/derive/tests/snapshots/derive__snapshots_skipped_generic_field_without_shape_bound.snap
---
source: tests/derive/tests/derive.rs
expression: "SkipsGeneric::<NotShape>::deserialize_shape()"
---
DeserializeShapeGraph {
    root: Definition(
        ShapeId(
            0,
        ),
    ),
    definitions: [
        DeserializeDefinitionShape {
            id: ShapeId(
                0,
            ),
            type_name: DeserializeTypeName {
                rust_name: "derive::SkipsGeneric<derive::NotShape>",
                name: "SkipsGeneric",
            },
            kind: Struct(
                DeserializeStructShape {
                    style: Struct,
                    fields: [
                        DeserializeFieldShape {
                            member: Named(
                                "value",
                            ),
                            name: "value",
                            aliases: [
                                "value",
                            ],
                            wire_shape: Omitted,
                            default: Default,
                        },
                    ],
                    attributes: DeserializeContainerAttributes {
                        tagging: External,
                        deny_unknown_fields: false,
                        default: None,
                        has_flatten: false,
                        transparent: false,
                        expecting: None,
                        non_exhaustive: false,
                    },
                },
            ),
        },
    ],
}
