tests/derive/tests/snapshots/derive__snapshots_struct_shape_from_container_and_field_attrs.snap
---
source: tests/derive/tests/derive.rs
expression: "Config::deserialize_shape()"
---
DeserializeShapeGraph {
    root: Definition(
        ShapeId(
            0,
        ),
    ),
    definitions: [
        DeserializeDefinitionShape {
            id: ShapeId(
                0,
            ),
            type_name: DeserializeTypeName {
                rust_name: "derive::Config",
                name: "Config",
            },
            kind: Struct(
                DeserializeStructShape {
                    style: Struct,
                    fields: [
                        DeserializeFieldShape {
                            member: Named(
                                "http_port",
                            ),
                            name: "http-port",
                            aliases: [
                                "http-port",
                            ],
                            wire_shape: Value(
                                U16,
                            ),
                            default: None,
                        },
                        DeserializeFieldShape {
                            member: Named(
                                "api_url",
                            ),
                            name: "api-url",
                            aliases: [
                                "api-url",
                                "endpoint",
                            ],
                            wire_shape: Value(
                                Option(
                                    String,
                                ),
                            ),
                            default: None,
                        },
                        DeserializeFieldShape {
                            member: Named(
                                "retries",
                            ),
                            name: "retries",
                            aliases: [
                                "retries",
                            ],
                            wire_shape: Value(
                                U8,
                            ),
                            default: Path(
                                "default_retries",
                            ),
                        },
                        DeserializeFieldShape {
                            member: Named(
                                "storage",
                            ),
                            name: "storage",
                            aliases: [
                                "storage",
                            ],
                            wire_shape: Flatten(
                                Definition(
                                    ShapeId(
                                        1,
                                    ),
                                ),
                            ),
                            default: None,
                        },
                        DeserializeFieldShape {
                            member: Named(
                                "skipped",
                            ),
                            name: "skipped",
                            aliases: [
                                "skipped",
                            ],
                            wire_shape: Omitted,
                            default: None,
                        },
                        DeserializeFieldShape {
                            member: Named(
                                "secret",
                            ),
                            name: "secret",
                            aliases: [
                                "secret",
                            ],
                            wire_shape: Value(
                                Opaque(
                                    OpaqueShape {
                                        type_name: "derive::NotShape",
                                        reason: CustomDeserializer,
                                        detail: Some(
                                            "custom_secret",
                                        ),
                                    },
                                ),
                            ),
                            default: None,
                        },
                    ],
                    attributes: DeserializeContainerAttributes {
                        tagging: External,
                        deny_unknown_fields: true,
                        default: Default,
                        has_flatten: true,
                        transparent: false,
                        expecting: Some(
                            "config object",
                        ),
                        non_exhaustive: false,
                    },
                },
            ),
        },
        DeserializeDefinitionShape {
            id: ShapeId(
                1,
            ),
            type_name: DeserializeTypeName {
                rust_name: "derive::Storage",
                name: "Storage",
            },
            kind: Enum(
                DeserializeEnumShape {
                    repr: Internal {
                        tag: "type",
                    },
                    variants: [
                        DeserializeVariantShape {
                            rust_name: "S3",
                            name: "s3",
                            aliases: [
                                "s3",
                                "s3-compatible",
                            ],
                            style: Struct,
                            content: Fields(
                                [
                                    DeserializeFieldShape {
                                        member: Named(
                                            "bucket_name",
                                        ),
                                        name: "bucket-name",
                                        aliases: [
                                            "bucket-name",
                                        ],
                                        wire_shape: Value(
                                            String,
                                        ),
                                        default: None,
                                    },
                                ],
                            ),
                            other: false,
                            untagged: false,
                        },
                        DeserializeVariantShape {
                            rust_name: "AzBlob",
                            name: "az-blob",
                            aliases: [
                                "az-blob",
                            ],
                            style: Struct,
                            content: Fields(
                                [
                                    DeserializeFieldShape {
                                        member: Named(
                                            "container_name",
                                        ),
                                        name: "container-name",
                                        aliases: [
                                            "container-name",
                                        ],
                                        wire_shape: Value(
                                            String,
                                        ),
                                        default: None,
                                    },
                                ],
                            ),
                            other: false,
                            untagged: false,
                        },
                        DeserializeVariantShape {
                            rust_name: "Other",
                            name: "other",
                            aliases: [
                                "other",
                            ],
                            style: Unit,
                            content: Fields(
                                [],
                            ),
                            other: true,
                            untagged: false,
                        },
                    ],
                    attributes: DeserializeContainerAttributes {
                        tagging: Internal {
                            tag: "type",
                        },
                        deny_unknown_fields: false,
                        default: None,
                        has_flatten: false,
                        transparent: false,
                        expecting: None,
                        non_exhaustive: true,
                    },
                },
            ),
        },
    ],
}
