tests/derive/tests/snapshots/derive__snapshots_transparent_struct_shape.snap
---
source: tests/derive/tests/derive.rs
expression: "UserId::deserialize_shape()"
---
DeserializeShapeGraph {
    root: Definition(
        ShapeId(
            0,
        ),
    ),
    definitions: [
        DeserializeDefinitionShape {
            id: ShapeId(
                0,
            ),
            type_name: DeserializeTypeName {
                rust_name: "derive::UserId",
                name: "UserId",
            },
            kind: Struct(
                DeserializeStructShape {
                    style: Newtype,
                    fields: [
                        DeserializeFieldShape {
                            member: Unnamed(
                                0,
                            ),
                            name: "0",
                            aliases: [
                                "0",
                            ],
                            wire_shape: Inline(
                                U64,
                            ),
                            default: None,
                        },
                    ],
                    attributes: DeserializeContainerAttributes {
                        tagging: External,
                        deny_unknown_fields: false,
                        default: None,
                        has_flatten: false,
                        transparent: true,
                        expecting: None,
                        non_exhaustive: false,
                    },
                },
            ),
        },
    ],
}
